Pagination seems done

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -459,6 +459,11 @@ main {
   fill: #444A59;
 }
 
+.pagination__link.selected-page {
+  color: coral;
+  background: lightgrey;
+}
+
 /* ==========================================================================
    Footer
    ========================================================================== */
