--- a/client/src/App.css
+++ b/client/src/App.css
@@ -190,6 +190,10 @@ main {
   background-color: #d9d9d9;
 }
 
+.button--wishlist.button-in-wishlist {
+  background: antiquewhite;
+}
+
 /* ==========================================================================
    Header
    ========================================================================== */
